Fix unused parameter build warning. https://bugs.webkit.org/show_bug.cgi?id=99400

Patch by Byungwoo Lee <bw80.lee@samsung.com> on 2012-10-15
Reviewed by Gyuyoung Kim.

Remove the name of unused parameters to fix the build warning (-Wunused-parameter).

Source/WebCore:

* platform/network/soup/ResourceErrorSoup.cpp:
(WebCore::ResourceError::tlsError):

Source/WebKit2:

* Shared/soup/WebCoreArgumentCodersSoup.cpp:
(CoreIPC::::encodePlatformData):
(CoreIPC::::decodePlatformData):
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::getSharedWorkerProcessConnection):
* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::handleEditingCommand):
(WebKit::NetscapePlugin::isEditingCommandEnabled):

Canonical link: https://commits.webkit.org/117362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131397 268f45cc-cd09-0410-ab3c-d52691b4dbfc